# routes/api.php
@@ -6,8 +6,10 @@ use App\Http\Controllers\AuthController;
 use App\Http\Controllers\RecipeController;
 
 
+//General Routes (Unauthenticated Routes)
 Route::post('/login', [AuthController::class, 'login']);
 
+//Protected Routes (Authenticated Routes)
 Route::middleware('auth:sanctum')->group(function () {
     // User Routes
     Route::get('/user', [AuthController::class, 'getUserDetails']);
@@ -16,4 +18,7 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('/recipes/search', [RecipeController::class, 'searchByTimeAndIngredients']);
     Route::get('/recipes/difficulty/{level}', [RecipeController::class, 'filterByDifficulty']);
     Route::get('/recipes/{id}', [RecipeController::class, 'show']);
+    Route::post('/recipes', [RecipeController::class, 'store']);
+    Route::put('/recipes/{id}', [RecipeController::class, 'update']);
+    Route::delete('/recipes/{id}', [RecipeController::class, 'destroy']);
 });
